add tabs to page

--- a/index.html
+++ b/index.html
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
 <html lang="de">
-	<head>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>RCJ Berlin 2020 - Ergebnisse</title>
-	</head>
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>RCJ Berlin 2020 - Ergebnisse</title>
 
-	<body>
-		Hello, World!
-	</body>
+        <link rel="stylesheet" href="./style.css">
+        <script src="main.js" type="text/javascript" defer></script>
+    </head>
+
+    <body>
+        <div id="progressbar"></div>
+        <div id="tabbar">
+            <button id="template-tab" type="button" class="template tabbar-item"></button>
+        </div>
+        
+        <div id="box-wrapper">
+            <div id="template-box" class="template box">
+                <h2 id="heading"></h2>
+            </div>
+        </div>
+    </body>
 </html>
