--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
         
         <div id="box-wrapper">
             <div id="template-box" class="template box">
-                <h2 id="heading"></h2>
+                <h2 id="heading" class="heading"></h2>
+                <p id="last-update" class="last-update">-</p>
+                <table id="table"></table>
             </div>
         </div>
     </body>
