make table responsive + highlight qualified teams

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
             <div id="template-box" class="template box">
                 <h2 id="heading" class="heading"></h2>
                 <p id="last-update" class="last-update">-</p>
-                <table id="table"></table>
+                <div style="overflow-x:auto;">
+                    <table id="table"></table>
+                </div>
             </div>
         </div>
     </body>
